--- a/languages/author-bio-box-pt_BR.po
+++ b/languages/author-bio-box-pt_BR.po
@@ -2,182 +2,165 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Author Bio Box v3.0.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: \n"
-"PO-Revision-Date: 2013-12-13 20:11:34+0000\n"
-"Last-Translator: Claudio Sanches <contato@claudiosmweb.com>\n"
+"POT-Creation-Date: 2014-02-10 22:23-0300\n"
+"PO-Revision-Date: 2014-02-10 22:23-0300\n"
+"Last-Translator: Rafael Funchal <rafaelfunchal@gmail.com>\n"
 "Language-Team: \n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: CSL v1.x\n"
-"X-Poedit-Language: Portuguese\n"
-"X-Poedit-Country: BRAZIL\n"
+"X-Generator: Poedit 1.5.4\n"
 "X-Poedit-SourceCharset: utf-8\n"
-"X-Poedit-KeywordsList: __;_e;__ngettext:1,2;_n:1,2;__ngettext_noop:1,2;_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2;\n"
+"X-Poedit-KeywordsList: __;_e;__ngettext:1,2;_n:1,2;__ngettext_noop:1,2;"
+"_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2\n"
 "X-Poedit-Basepath: ../\n"
-"X-Poedit-Bookmarks: \n"
+"X-Textdomain-Support: yes\n"
 "X-Poedit-SearchPath-0: .\n"
-"X-Textdomain-Support: yes"
 
+# @ author-bio-box
 #: admin/class-author-bio-box-admin.php:88
-#@ author-bio-box
 msgid "Settings"
 msgstr "Configurações"
 
+# @ author-bio-box
+#: admin/class-author-bio-box-admin.php:93
+msgid "Display in"
+msgstr "Exibir em"
+
+# @ author-bio-box
+#: admin/class-author-bio-box-admin.php:96
+#, php-format
+msgid "You can display the box directly into your theme using: %s"
+msgstr "Você pode exibir o box diretamente em seu tema usando: %s"
+
+# @ author-bio-box
+#: admin/class-author-bio-box-admin.php:100
+msgid "Only in Posts"
+msgstr "Apenas em Posts"
+
+# @ author-bio-box
+#: admin/class-author-bio-box-admin.php:101
+msgid "Homepage and Posts"
+msgstr "Homepage e Posts"
+
+# @ author-bio-box
+#: admin/class-author-bio-box-admin.php:102
+#: admin/class-author-bio-box-admin.php:154
+msgid "None"
+msgstr "Nenhum"
+
+# @ author-bio-box
+#: admin/class-author-bio-box-admin.php:106
+msgid "Design"
+msgstr "Aparência"
+
+# @ author-bio-box
+#: admin/class-author-bio-box-admin.php:111
+msgid "Gravatar size"
+msgstr "Tamanho do Gravatar"
+
+# @ author-bio-box
+#: admin/class-author-bio-box-admin.php:114
+#, php-format
+msgid ""
+"Set the Gravatar size (only integers). To configure the profile picture of "
+"the author you need to register in %s."
+msgstr ""
+"Configure o tamanho do Gravatar (aceita apenas números inteiros). Para "
+"configurar a imagem do perfil do autor é necessário fazer cadastro em %s."
+
+# @ author-bio-box
+#: admin/class-author-bio-box-admin.php:119
+msgid "Background color"
+msgstr "Cor de fundo"
+
+# @ author-bio-box
+#: admin/class-author-bio-box-admin.php:126
+msgid "Text color"
+msgstr "Cor do texto"
+
+# @ author-bio-box
+#: admin/class-author-bio-box-admin.php:133
+msgid "Title color"
+msgstr "Cor do título"
+
+# @ author-bio-box
+#: admin/class-author-bio-box-admin.php:140
+msgid "Border size"
+msgstr "Cor da borda"
+
+# @ author-bio-box
+#: admin/class-author-bio-box-admin.php:144
+msgid "Thickness of the top and bottom edge of the box (only integers)."
+msgstr ""
+"Configura a largura da borda no topo e rodapé do box (aceita apenas números "
+"inteiros)."
+
+# @ author-bio-box
+#: admin/class-author-bio-box-admin.php:148
+msgid "Border style"
+msgstr "Estilo da borda"
+
+# @ author-bio-box
+#: admin/class-author-bio-box-admin.php:155
+msgid "Solid"
+msgstr "Sólida"
+
+# @ author-bio-box
+#: admin/class-author-bio-box-admin.php:156
+msgid "Dotted"
+msgstr "Pontilhada"
+
+# @ author-bio-box
+#: admin/class-author-bio-box-admin.php:157
+msgid "Dashed"
+msgstr "Tracejada"
+
+# @ author-bio-box
+#: admin/class-author-bio-box-admin.php:161
+msgid "Border color"
+msgstr "Cor da borda"
+
+# @ author-bio-box
 #: admin/class-author-bio-box-admin.php:183
-#@ author-bio-box
 msgid "Facebook"
 msgstr "Facebook"
 
+# @ author-bio-box
 #: admin/class-author-bio-box-admin.php:184
-#@ author-bio-box
 msgid "Twitter"
 msgstr "Twitter"
 
+# @ author-bio-box
 #: admin/class-author-bio-box-admin.php:185
-#@ author-bio-box
 msgid "Google Plus"
 msgstr "Google Plus"
 
 #: admin/class-author-bio-box-admin.php:186
-#@ author-bio-box
-msgid "LinkedIn"
-msgstr "LinkedIn"
+msgid "Vimeo"
+msgstr "Vimeo"
 
-#: admin/class-author-bio-box-admin.php:93
-#@ author-bio-box
-msgid "Display in"
-msgstr "Exibir em"
+#: admin/class-author-bio-box-admin.php:187
+msgid "YouTube"
+msgstr "YouTube"
 
-#: admin/class-author-bio-box-admin.php:96
-#, php-format
-#@ author-bio-box
-msgid "You can display the box directly into your theme using: %s"
-msgstr "Você pode exibir o box diretamente em seu tema usando: %s"
+#: admin/class-author-bio-box-admin.php:188
+msgid "Flickr"
+msgstr "Flickr"
 
-#: admin/class-author-bio-box-admin.php:100
-#@ author-bio-box
-msgid "Only in Posts"
-msgstr "Apenas em Posts"
+#: admin/class-author-bio-box-admin.php:189
+msgid "Tumblr"
+msgstr "Tumblr"
 
-#: admin/class-author-bio-box-admin.php:101
-#@ author-bio-box
-msgid "Homepage and Posts"
-msgstr "Homepage e Posts"
-
-#: admin/class-author-bio-box-admin.php:102
-#: admin/class-author-bio-box-admin.php:154
-#@ author-bio-box
-msgid "None"
-msgstr "Nenhum"
-
-#: admin/class-author-bio-box-admin.php:106
-#@ author-bio-box
-msgid "Design"
-msgstr "Aparência"
-
-#: admin/class-author-bio-box-admin.php:111
-#@ author-bio-box
-msgid "Gravatar size"
-msgstr "Tamanho do Gravatar"
-
-#: admin/class-author-bio-box-admin.php:114
-#, php-format
-#@ author-bio-box
-msgid "Set the Gravatar size (only integers). To configure the profile picture of the author you need to register in %s."
-msgstr "Configure o tamanho do Gravatar (aceita apenas números inteiros). Para configurar a imagem do perfil do autor é necessário fazer cadastro em %s."
-
-#: admin/class-author-bio-box-admin.php:119
-#@ author-bio-box
-msgid "Background color"
-msgstr "Cor de fundo"
-
-#: admin/class-author-bio-box-admin.php:126
-#@ author-bio-box
-msgid "Text color"
-msgstr "Cor do texto"
-
-#: admin/class-author-bio-box-admin.php:133
-#@ author-bio-box
-msgid "Title color"
-msgstr "Cor do título"
-
-#: admin/class-author-bio-box-admin.php:140
-#@ author-bio-box
-msgid "Border size"
-msgstr "Cor da borda"
-
-#: admin/class-author-bio-box-admin.php:144
-#@ author-bio-box
-msgid "Thickness of the top and bottom edge of the box (only integers)."
-msgstr "Configura a largura da borda no topo e rodapé do box (aceita apenas números inteiros)."
-
-#: admin/class-author-bio-box-admin.php:148
-#@ author-bio-box
-msgid "Border style"
-msgstr "Estilo da borda"
-
-#: admin/class-author-bio-box-admin.php:155
-#@ author-bio-box
-msgid "Solid"
-msgstr "Sólida"
-
-#: admin/class-author-bio-box-admin.php:156
-#@ author-bio-box
-msgid "Dotted"
-msgstr "Pontilhada"
-
-#: admin/class-author-bio-box-admin.php:157
-#@ author-bio-box
-msgid "Dashed"
-msgstr "Tracejada"
-
-#: admin/class-author-bio-box-admin.php:161
-#@ author-bio-box
-msgid "Border color"
-msgstr "Cor da borda"
-
-#. translators: plugin header field 'Name'
-#: admin/class-author-bio-box-admin.php:234
-#: admin/class-author-bio-box-admin.php:235
-#: author-bio-box.php:0
-#@ author-bio-box
+# @ author-bio-box
+#: admin/class-author-bio-box-admin.php:237
+#: admin/class-author-bio-box-admin.php:238
 msgid "Author Bio Box"
 msgstr "Author Bio Box"
 
-#. translators: plugin header field 'PluginURI'
-#: author-bio-box.php:0
-#@ author-bio-box
-msgid "https://github.com/claudiosmweb/author-bio-box"
-msgstr "https://github.com/claudiosmweb/author-bio-box"
-
-#. translators: plugin header field 'Description'
-#: author-bio-box.php:0
-#@ author-bio-box
-msgid "Display a box with the author's biography and also social icons in bottom of the post."
-msgstr "Exibe uma caixa com a biografia do autor e também ícones sociais no final do post."
-
-#. translators: plugin header field 'Author'
-#: author-bio-box.php:0
-#@ author-bio-box
-msgid "claudiosanches"
-msgstr "claudiosanches"
-
-#. translators: plugin header field 'AuthorURI'
-#: author-bio-box.php:0
-#@ author-bio-box
-msgid "http://claudiosmweb.com/"
-msgstr "http://claudiosmweb.com/"
-
-#: public/class-author-bio-box.php:340
-#@ author-bio-box
+# @ author-bio-box
+#: public/class-author-bio-box.php:345
 msgid "All posts by"
 msgstr "Todos os posts por"
-
-#. translators: plugin header field 'Version'
-#: author-bio-box.php:0
-#@ author-bio-box
-msgid "3.0.0"
-msgstr "3.0.0"
-
