--- a/languages/author-bio-box.pot
+++ b/languages/author-bio-box.pot
@@ -1,14 +1,14 @@
-# Copyright (C) 2014 claudiosanches
+# Copyright (C) 2017 claudiosanches
 # This file is distributed under the GPL-2.0+.
 msgid ""
 msgstr ""
-"Project-Id-Version: Author Bio Box 3.3.0\n"
+"Project-Id-Version: Author Bio Box 3.3.1\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/author-bio-box/\n"
-"POT-Creation-Date: 2014-10-27 21:29:06+00:00\n"
+"POT-Creation-Date: 2017-11-01 18:27:50+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2014-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2017-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "X-Generator: grunt-wp-i18n 0.4.9\n"
@@ -141,7 +141,7 @@ msgid "All posts by"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
-msgid "https://github.com/claudiosmweb/author-bio-box"
+msgid "https://github.com/claudiosanches/author-bio-box"
 msgstr ""
 
 #. Description of the plugin/theme
@@ -155,5 +155,5 @@ msgid "claudiosanches"
 msgstr ""
 
 #. Author URI of the plugin/theme
-msgid "http://claudiosmweb.com/"
+msgid "http://claudiosanches.com/"
 msgstr ""
